[package]
name = "dmail-mint-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#agent
ic-agent = { version = "0.11.1", features = ["reqwest", "pem"] }

tokio = { version = "1.15.0", features = ["full"] }

# icp cdk
ic-cdk = "0.3.3"

# sql connect
sqlx = { version = "0.5.9", default-features = false, features = [
    "runtime-tokio-native-tls",
    "mysql",
    "macros",
] }

# initaliztioner
once_cell = "1.9.0"


# for  time
garcon = "0.2.3"

serde = { version = "1.0.131", features = ["derive"] }

#log
log = "0.4.14"
fast_log = { version = "1.4.15", features = ["lz4", "zip", "gzip"] }


# config
config_rs = { package = "config", git = "https://github.com.cnpmjs.org/mehcode/config-rs.git", features = [
    "yaml",
] }
